<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tripie Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>
    <string name="tripie_slogan">Take Off With Confidence</string>
    <string name="masuk">Masuk</string>
    <string name="home">Home</string>
    <string name="daftar_penerbangan">Daftar Penerbangan</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="keluar">Keluar</string>
    <string name="account_info">Tripie Info</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="logo_login">Logo Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="kelas_pesawat">Kelas Pesawat</string>
    <string name="todo3">TODO</string>
    <string name="sorting">Sorting</string>
    <string name="harga">Harga</string>
    <string name="paling_mahal">Paling mahal</string>
    <string name="paling_murah">Paling murah</string>
    <string name="tanggal_penerbangan">Tanggal Penerbangan</string>
    <string name="terbaru">Terbaru</string>
    <string name="jam_keberangkatan">Jam Keberangkatan</string>
    <string name="paling_awal">Paling awal</string>
    <string name="paling_akhir">Paling akhir</string>
    <string name="jam_tiba">Jam Tiba</string>
    <string name="paling_awal2">Paling awal</string>
    <string name="paling_akhir2">Paling akhir</string>
    <string name="bang_jono">Bang Jono</string>
    <string name="bangjono_gmail_com">bangjono@gmail.com</string>
    <string name="nama_bandara_asal">Nama Bandara Asal</string>
    <string name="kode_bandara_asal">Kode Bandara Asal</string>
    <string name="kota_bandara_asal">Kota Bandara Asal</string>
    <string name="nama_bandara_tujuan">Nama Bandara Tujuan</string>
    <string name="kode_bandara_tujuan">Kode Bandara Tujuan</string>
    <string name="kota_bandara_asal2">Kota Bandara Asal</string>
    <string name="tanggal">Tanggal</string>
    <string name="kelas_pesawat2">Kelas Pesawat</string>
    <string name="jam_keberangkatan2">Jam Keberangkatan</string>
    <string name="jam_tiba2">Jam Tiba</string>
    <string name="harga_idr">Harga (IDR)</string>
    <string name="nama_pesawat">Nama Pesawat</string>
    <string name="tambah">Tambah</string>
    <string name="todo4">TODO</string>
    <string name="bandara">Bandara</string>
    <string name="_0">0</string>
    <string name="todo5">TODO</string>
    <string name="pesanan">Pesanan</string>
    <string name="_02">0</string>
    <string name="todo6">TODO</string>
    <string name="pengguna">Pengguna</string>
    <string name="_03">0</string>
    <string name="todo7">TODO</string>
    <string name="admin">Admin</string>
    <string name="_04">0</string>
    <string name="penumpang">Penumpang</string>
    <string name="mamang_kesbor">Mamang Kesbor</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="cgk_jakarta">CGK, Jakarta</string>
    <string name="_26_nov_2022">26, Nov 2022</string>
    <string name="_07_40">07:40</string>
    <string name="cgk_jakarta1">CGK, Jakarta</string>
    <string name="_26_nov_20221">26, Nov 2022</string>
    <string name="_07_401">07:40</string>
    <string name="harga1">Harga:</string>
    <string name="idr_2_000_000">IDR 2.000.000</string>
    <string name="tipe_penerbangan">Tipe Penerbangan:</string>
    <string name="one_way">One Way</string>
    <string name="tanggal_pulang">Tanggal Pulang:</string>
    <string name="tanggal1">Tanggal</string>
    <string name="booking_id">Booking ID</string>
    <string name="_00023923">00023923</string>
    <string name="kelas">Kelas</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="pesawat">Pesawat</string>
    <string name="boeing_737">Boeing 737</string>
    <string name="filter">Filter</string>
    <string name="tambah_jadwal_penerbangan">Tambah Jadwal Penerbangan</string>
    <string name="nama_bandara">Nama Bandara</string>
    <string name="depart_time">Depart Time</string>
    <string name="todo1">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="idr_2_000_0001">IDR 2.000.000</string>
    <string name="detail1">Detail</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="tanggal_penerbangan1">Tanggal Penerbangan</string>
    <string name="kelas1">Kelas</string>
    <string name="jam_keberangkatan1">Jam Keberangkatan</string>
    <string name="jam_berangkat">Jam Berangkat</string>
    <string name="jam_tiba1">Jam Tiba</string>
    <string name="jam_tiba3">Jam Tiba</string>
    <string name="harga2">Harga</string>

</resources>