<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/flightFragment"
            android:icon="@drawable/ic_plane"
            android:title="@string/daftar_penerbangan"/>
        <item
            android:id="@+id/bookedTicketFragment"
            android:icon="@drawable/ic_trolly"
            android:title="@string/daftar_pesanan"/>
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_home"
            android:title="@string/keluar"/>
    </group>
</menu>