<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.flightlist.bottomsheetdialog.SortingFlightDialog">

    <ImageView
        android:id="@+id/ivFilterExit"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo3" />

    <TextView
        android:id="@+id/tvLabelKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sorting"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivFilterExit"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelKelas">

        <TextView
            android:id="@+id/tvLabelHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/harga"
            android:textColor="@color/soft_black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paling_mahal"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paling_murah"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

        <TextView
            android:id="@+id/tvLabelTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="8dp"
            android:text="@string/tanggal_penerbangan"
            android:textColor="@color/soft_black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/terbaru"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <TextView
            android:id="@+id/tvLabelJamPenerbagan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="8dp"
            android:text="@string/jam_keberangkatan"
            android:textColor="@color/soft_black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paling_awal"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paling_akhir"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <TextView
            android:id="@+id/tvLabelJamTiba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="8dp"
            android:text="@string/jam_tiba"
            android:textColor="@color/soft_black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paling_awal2"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_gray" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/paling_akhir2"
                android:textColor="@color/soft_black"
                android:textSize="14sp"/>

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>